core/src/main/java/edu/tufts/hrilab/action/asl/ASLParser.java
// Generated from /home/evan/code/diarc/diarc/core/src/main/java/edu/tufts/hrilab/action/asl/ASL.g4 by ANTLR 4.13.2
package edu.tufts.hrilab.action.asl;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ASLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, WS=22, LINECOMMENT=23, BLOCKCOMMENT=24, 
		IMPORT=25, AS=26, ACTION=27, OPERATOR=28, OBSERVATION=29, GOAL=30, TSC=31, 
		INFER=32, VAR=33, SET=34, OR=35, PRE=36, POST=37, OVERALL=38, OBLIGATION=39, 
		EFFECT=40, ALWAYS=41, SUCCESS=42, FAILURE=43, NONPERF=44, OBSERVES=45, 
		RECOVERY=46, LOCKS=47, CONDITION=48, IF=49, ELIF=50, ELSE=51, WHILE=52, 
		FOR=53, FOREACH=54, TRUE=55, FALSE=56, EXIT=57, TRY=58, CATCH=59, FINALLY=60, 
		NOT=61, RETURN=62, ASYNC=63, JOIN=64, INTERRUPT=65, SUSPEND=66, CANCEL=67, 
		RESUME=68, ARIOPT=69, OROPT=70, ANDOPT=71, INCOPT=72, GRWOPT=73, CMPOPT=74, 
		NUMBER=75, NAME=76, GLOBALVAR=77, LOCALVAR=78, SENTENCE=79;
	public static final int
		RULE_actionScript = 0, RULE_imports = 1, RULE_alias = 2, RULE_definitions = 3, 
		RULE_reserved = 4, RULE_name = 5, RULE_definition = 6, RULE_outputParameter = 7, 
		RULE_inputParameter = 8, RULE_description = 9, RULE_parameterList = 10, 
		RULE_parameter = 11, RULE_parameterTail = 12, RULE_javaTypeList = 13, 
		RULE_javaType = 14, RULE_typeTail = 15, RULE_javaTypeListTail = 16, RULE_generic = 17, 
		RULE_assignment = 18, RULE_block = 19, RULE_content = 20, RULE_localvar = 21, 
		RULE_setting = 22, RULE_conditions = 23, RULE_orCondition = 24, RULE_preCondition = 25, 
		RULE_overallCondition = 26, RULE_obligationCondition = 27, RULE_predicate = 28, 
		RULE_predicateList = 29, RULE_inputList = 30, RULE_input = 31, RULE_inputTail = 32, 
		RULE_outputList = 33, RULE_output = 34, RULE_outputTail = 35, RULE_effects = 36, 
		RULE_alwaysEffect = 37, RULE_successEffect = 38, RULE_failureEffect = 39, 
		RULE_nonperfEffect = 40, RULE_observes = 41, RULE_interrupts = 42, RULE_onCancel = 43, 
		RULE_onSuspend = 44, RULE_onResume = 45, RULE_resumeResetSpec = 46, RULE_interruptSpec = 47, 
		RULE_interruptSpecType = 48, RULE_recovery = 49, RULE_recoveryGoals = 50, 
		RULE_recoveryExcludedGoals = 51, RULE_recoveryFailedActions = 52, RULE_recoveryExcludedFailedActions = 53, 
		RULE_recoveryFailureReasons = 54, RULE_recoveryExcludedFailureReasons = 55, 
		RULE_recoveryActionStatuses = 56, RULE_locks = 57, RULE_spec = 58, RULE_specReturn = 59, 
		RULE_singleArgReturn = 60, RULE_specFunction = 61, RULE_specType = 62, 
		RULE_function = 63, RULE_operation = 64, RULE_control = 65, RULE_ifStatement = 66, 
		RULE_booleanExpression = 67, RULE_orExpression = 68, RULE_andExpression = 69, 
		RULE_primaryExpression = 70, RULE_controlContent = 71, RULE_elifStatement = 72, 
		RULE_elseStatement = 73, RULE_whileStatement = 74, RULE_forStatement = 75, 
		RULE_forInitial = 76, RULE_forCondition = 77, RULE_forUpdate = 78, RULE_forEachStatement = 79, 
		RULE_exitStatement = 80, RULE_tryStatement = 81, RULE_catchStatement = 82, 
		RULE_catchParameter = 83, RULE_finallyStatement = 84, RULE_returnStatement = 85, 
		RULE_asyncStatement = 86, RULE_joinStatement = 87;
	private static String[] makeRuleNames() {
		return new String[] {
			"actionScript", "imports", "alias", "definitions", "reserved", "name", 
			"definition", "outputParameter", "inputParameter", "description", "parameterList", 
			"parameter", "parameterTail", "javaTypeList", "javaType", "typeTail", 
			"javaTypeListTail", "generic", "assignment", "block", "content", "localvar", 
			"setting", "conditions", "orCondition", "preCondition", "overallCondition", 
			"obligationCondition", "predicate", "predicateList", "inputList", "input", 
			"inputTail", "outputList", "output", "outputTail", "effects", "alwaysEffect", 
			"successEffect", "failureEffect", "nonperfEffect", "observes", "interrupts", 
			"onCancel", "onSuspend", "onResume", "resumeResetSpec", "interruptSpec", 
			"interruptSpecType", "recovery", "recoveryGoals", "recoveryExcludedGoals", 
			"recoveryFailedActions", "recoveryExcludedFailedActions", "recoveryFailureReasons", 
			"recoveryExcludedFailureReasons", "recoveryActionStatuses", "locks", 
			"spec", "specReturn", "singleArgReturn", "specFunction", "specType", 
			"function", "operation", "control", "ifStatement", "booleanExpression", 
			"orExpression", "andExpression", "primaryExpression", "controlContent", 
			"elifStatement", "elseStatement", "whileStatement", "forStatement", "forInitial", 
			"forCondition", "forUpdate", "forEachStatement", "exitStatement", "tryStatement", 
			"catchStatement", "catchParameter", "finallyStatement", "returnStatement", 
			"asyncStatement", "joinStatement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'='", "'['", "']'", "'('", "')'", "','", "'.'", "'<'", 
			"'>'", "':'", "'{'", "'}'", "'reset'", "'goals'", "'excludedGoals'", 
			"'failedActions'", "'excludedFailedActions'", "'failureReasons'", "'excludedFailureReasons'", 
			"'actionStatuses'", null, null, null, "'import'", "'as'", "'act'", "'op'", 
			"'obs'", "'goal'", "'tsc'", "'infer'", "'var'", "'setting'", "'or'", 
			"'pre'", "'post'", "'overall'", "'obligation'", "'effects'", "'always'", 
			"'success'", "'failure'", "'nonperf'", "'observes'", "'recovery'", "'locks'", 
			"'conditions'", "'if'", "'elseif'", "'else'", "'while'", "'for'", "'foreach'", 
			"'true'", "'false'", "'exit'", "'try'", "'catch'", "'finally'", "'~'", 
			"'return'", "'async'", "'join'", "'onInterrupt'", "'suspend'", "'cancel'", 
			"'resume'", null, "'||'", "'&&'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "WS", "LINECOMMENT", 
			"BLOCKCOMMENT", "IMPORT", "AS", "ACTION", "OPERATOR", "OBSERVATION", 
			"GOAL", "TSC", "INFER", "VAR", "SET", "OR", "PRE", "POST", "OVERALL", 
			"OBLIGATION", "EFFECT", "ALWAYS", "SUCCESS", "FAILURE", "NONPERF", "OBSERVES", 
			"RECOVERY", "LOCKS", "CONDITION", "IF", "ELIF", "ELSE", "WHILE", "FOR", 
			"FOREACH", "TRUE", "FALSE", "EXIT", "TRY", "CATCH", "FINALLY", "NOT", 
			"RETURN", "ASYNC", "JOIN", "INTERRUPT", "SUSPEND", "CANCEL", "RESUME", 
			"ARIOPT", "OROPT", "ANDOPT", "INCOPT", "GRWOPT", "CMPOPT", "NUMBER", 
			"NAME", "GLOBALVAR", "LOCALVAR", "SENTENCE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ASL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ASLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ActionScriptContext extends ParserRuleContext {
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ASLParser.EOF, 0); }
		public List<ImportsContext> imports() {
			return getRuleContexts(ImportsContext.class);
		}
		public ImportsContext imports(int i) {
			return getRuleContext(ImportsContext.class,i);
		}
		public ActionScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actionScript; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASLListener ) ((ASLListener)listener).enterActionScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASLListener ) ((ASLListener)listener).exitActionScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASLVisitor ) return ((ASLVisitor<? extends T>)visitor).visitActionScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActionScriptContext actionScript() throws RecognitionException {
		ActionScriptContext _localctx = new ActionScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_actionScript);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(176);
				imports();
				}
				}
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(182);
			definitions();
			setState(183);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportsContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(ASLParser.IMPORT, 0); }
		public JavaTypeContext javaType() {
			return getRuleContext(JavaTypeContext.class,0);
		}
		public AliasContext alias() {
			return getRuleContext(AliasContext.class,0);
		}
		public ImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASLListener ) ((ASLListener)listener).enterImports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASLListener ) ((ASLListener)listener).exitImports(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASLVisitor ) return ((ASLVisitor<? extends T>)visitor).visitImports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportsContext imports() throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_imports);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(IMPORT);
			setState(186);
			javaType();
			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AS) {
				{
				setState(187);
				alias();
				}
			}

			setState(190);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AliasContext extends ParserRuleContext {
		public TerminalNode AS() { return getToken(ASLParser.AS, 0); }
		public JavaTypeContext javaType() {
			return getRuleContext(JavaTypeContext.class,0);
		}
		public AliasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASLListener ) ((ASLListener)listener).enterAlias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASLListener ) ((ASLListener)listener).exitAlias(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASLVisitor ) return ((ASLVisitor<? extends T>)visitor).visitAlias(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AliasContext alias() throws RecognitionException {
		AliasContext _localctx = new AliasContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_alias);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			match(AS);
			setState(193);
			javaType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionsContext extends ParserRuleContext {
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASLListener ) ((ASLListener)listener).enterDefinitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASLListener ) ((ASLListener)listener).exitDefinitions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASLVisitor ) return ((ASLVisitor<? extends T>)visitor).visitDefinitions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definitions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(196); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(195);
				definition();
				}
				}
				setState(198); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__4 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReservedContext extends ParserRuleContext {
		public TerminalNode TSC() { return getToken(ASLParser.TSC, 0); }
		public TerminalNode ACTION() { return getToken(ASLParser.ACTION, 0); }
		public TerminalNode OPERATOR() { return getToken(ASLParser.OPERATOR, 0); }
		public TerminalNode GOAL() { return getToken(ASLParser.GOAL, 0); }
		public TerminalNode OBSERVATION() { return getToken(ASLParser.OBSERVATION, 0); }
		public TerminalNode VAR() { return getToken(ASLParser.VAR, 0); }
		public TerminalNode SET() { return getToken(ASLParser.SET, 0); }
		public TerminalNode OR() { return getToken(ASLParser.OR, 0); }
		public TerminalNode PRE() { return getToken(ASLParser.PRE, 0); }
		public TerminalNode POST() { return getToken(ASLParser.POST, 0); }
		public TerminalNode OVERALL() { return getToken(ASLParser.OVERALL, 0); }
		public TerminalNode OBLIGATION() { return getToken(ASLParser.OBLIGATION, 0); }
		public TerminalNode EFFECT() { return getToken(ASLParser.EFFECT, 0); }
		public TerminalNode ALWAYS() { return getToken(ASLParser.ALWAYS, 0); }
		public TerminalNode SUCCESS() { return getToken(ASLParser.SUCCESS, 0); }
		public TerminalNode FAILURE() { return getToken(ASLParser.FAILURE, 0); }
		public TerminalNode NONPERF() { return getToken(ASLParser.NONPERF, 0); }
		public TerminalNode OBSERVES() { return getToken(ASLParser.OBSERVES, 0); }
		public TerminalNode INTERRUPT() { return getToken(ASLParser.INTERRUPT, 0); }
		public TerminalNode SUSPEND() { return getToken(ASLParser.SUSPEND, 0); }
		public TerminalNode CANCEL() { return getToken(ASLParser.CANCEL, 0); }
		public TerminalNode RESUME() { return getToken(ASLParser.RESUME, 0); }
		public TerminalNode LOCKS() { return getToken(ASLParser.LOCKS, 0); }
		public TerminalNode CONDITION() { return getToken(ASLParser.CONDITION, 0); }
		public TerminalNode RECOVERY() { return getToken(ASLParser.RECOVERY, 0); }
		public TerminalNode IF() { return getToken(ASLParser.IF, 0); }
		public TerminalNode ELIF() { return getToken(ASLParser.ELIF, 0); }
		public TerminalNode ELSE() { return getToken(ASLParser.ELSE, 0); }
		public TerminalNode WHILE() { return getToken(ASLParser.WHILE, 0); }
		public TerminalNode FOR() { return getToken(ASLParser.FOR, 0); }
		public TerminalNode FOREACH() { return getToken(ASLParser.FOREACH, 0); }
		public TerminalNode TRUE() { return getToken(ASLParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(ASLParser.FALSE, 0); }
		public TerminalNode EXIT() { return getToken(ASLParser.EXIT, 0); }
		public TerminalNode TRY() { return getToken(ASLParser.TRY, 0); }
		public TerminalNode CATCH() { return getToken(ASLParser.CATCH, 0); }
		public TerminalNode FINALLY() { return getToken(ASLParser.FINALLY, 0); }
		public TerminalNode NOT() { return getToken(ASLParser.NOT, 0); }
		public TerminalNode RETURN() { return getToken(ASLParser.RETURN, 0); }
		public TerminalNode ASYNC() { return getToken(ASLParser.ASYNC, 0); }
		public TerminalNode JOIN() { return getToken(ASLParser.JOIN, 0); }
		public ReservedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reserved; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASLListener ) ((ASLListener)listener).enterReserved(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASLListener ) ((ASLListener)listener).exitReserved(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASLVisitor ) return ((ASLVisitor<? extends T>)visitor).visitReserved(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReservedContext reserved() throws RecognitionException {
		ReservedContext _localctx = new ReservedContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_reserved);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(200);
			_la = _input.LA(1);
			if ( !(((((_la - 27)) & ~0x3f) == 0 && ((1L << (_la - 27)) & 4398046511071L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NameContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(ASLParser.NAME, 0); }
		public TerminalNode GLOBALVAR() { return getToken(ASLParser.GLOBALVAR, 0); }
		public TerminalNode LOCALVAR() { return getToken(ASLParser.LOCALVAR, 0); }
		public ReservedContext reserved() {
			return getRuleContext(ReservedContext.class,0);
		}
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASLListener ) ((ASLListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASLListener ) ((ASLListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASLVisitor ) return ((ASLVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}
